@@ -1,4 +1,10 @@
-2000-01-13; Alessandro Zummo <a.zummo@towertech.it>
+2009-01-13; Alessandro Zummo <a.zummo@towertech.it>
+
+	* src/rig-gui-lcd.c:
+	Do not clear frequency if user hits return and
+	the new freq has not been entered.
+
+2009-01-13; Alessandro Zummo <a.zummo@towertech.it>
 
 	* src/grig-debug.c:
 	Fixed debug levels
